--- a/index.html
+++ b/index.html
@@ -364,6 +364,13 @@ a {
   box-shadow: 0 12px 32px rgba(227,30,36,0.3);
 }
 
+.container {
+  max-width: 1200px; /* or 1140px, depending on design */
+  margin: 0 auto;    /* centers the content */
+  padding: 0 20px;   /* spacing on left and right */
+  box-sizing: border-box;
+}
+
 .mobile-toggle {
   display: none;
   background: none;
@@ -1343,6 +1350,7 @@ a {
 
 
 <section>
+  <div class="container">
   <h2>Key Features Available on 66 Lottery</h2>
 
   <div class="card">
@@ -1360,10 +1368,12 @@ a {
       offers various promotional benefits such as sign-up bonuses, referral rewards, and periodic activity-based incentives. Bonus terms and availability may vary according to platform policies.
     </p>
   </div>
+  </div>
 </section>
 
 <!-- REGISTER SECTION FIXED -->
 <section>
+  <div class="container">
     <h2>66 Lottery Registration Guide for New Users</h2>
 
     <div class="card">
@@ -1417,6 +1427,7 @@ a {
       </div>
 
     </div>
+  </div>
   </div>
 </section>
 
