Change gap in hero-cta to 20px and center content

--- a/index.html
+++ b/index.html
@@ -457,7 +457,8 @@ a {
 
 .hero-cta {
   display: flex;
-  gap: 1rem;
+  gap: 20px; 
+  justify-content: center;
   flex-wrap: wrap;
   animation: fadeInUp 0.8s ease 0.4s backwards;
 }
