Update image sources and modify headings
Updated image sources and alt texts for better clarity. Modified headings for improved SEO and user understanding.

--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@
     <nav class="nav-container">
       <a href="https://r66lottery.com/" class="logo">
         <img 
-          src="66lottery-logo.png"
+          src="66Lottery-Game-Logo.png"
           alt="66 Lottery Logo"
           loading="lazy"
           width="40"
@@ -1321,21 +1321,14 @@
   
   <div class="banner-image">
     <div class="slides-wrapper">
-      <img src="wingo-game-aboutus.webp"
+      <img src="66-Lottery-Banner.webp"
           width="600"
           height="400"
           loading="lazy"
           alt="66 Lottery Register Screen"
           class="banner-slide active">
 
-      <img src="Wingo-Game-Terms-Conditions.webp"
-          width="600"
-          height="400"
-          loading="lazy"
-          alt="66 Lottery Game Interface"
-          class="banner-slide">
-
-      <img src="Wingo-Game-image.webp"
+      <img src="66Lottery-Signup-Login-Guide.webp"
           width="600"
           height="400"
           loading="lazy"
@@ -1347,7 +1340,6 @@
     <div class="slider-dots">
       <span class="dot active" onclick="goToSlide(0)"></span>
       <span class="dot" onclick="goToSlide(1)"></span>
-      <span class="dot" onclick="goToSlide(2)"></span>
     </div>
   </div>
 
@@ -1427,7 +1419,7 @@
           <div class="game-icon">🎮</div>
           <h3 class="game-title">Chicken Winner Game</h3>
           <p class="game-desc">
-            Chicken Road is a casual game where players dodge obstacles to earn rewards—a fun, light alternative to lottery games.
+            Chicken Road is a casual game where players dodge obstacles to earn rewards a fun, light alternative to lottery games.
           </p>
         </div>
       </div>
@@ -1482,8 +1474,8 @@
         </p>
 
         <div class="banner-image">
-          <img src="66lottery-register.webp"
-              width="600"
+          <img src="66Lottery-Signup-Login-Guide.webp"
+              width="800"
               height="400"
               loading="lazy"
               alt="66 Lottery registration interface"
@@ -1538,7 +1530,7 @@
 
   <section>
     <div class="container">
-      <h2>66 Lottery Game Download: Useful Details for Mobile Players</h2>
+      <h2>66 Lottery Game Download: What Mobile Users Should Know</h2>
       <div class="card">
         <p>
           The term
@@ -1572,7 +1564,7 @@
 
   <section>
     <div class="container">
-      <h2>Colour Prediction Games on 66 Lottery: What to Expect</h2>
+      <h2>66 Lottery Colour Prediction & How Players Approach it?</h2>
       <div class="card">
         <p>
           Colour prediction formats are among the most discussed options on the platform.
@@ -1592,7 +1584,7 @@
 
   <section>
     <div class="container">
-      <h2>Is 66 Lottery a Legit Platform? Common User Questions</h2>
+      <h2>66 Lottery Game: Real or Fake? Addressing Common Concerns</h2>
       <div class="card">
         <p>
           A common concern among new users is whether the platform is genuine.
@@ -1613,7 +1605,7 @@
 
   <section>
     <div class="container">
-      <h2>How Gameplay Works on the 66 Lottery Platform</h2>
+      <h2>How to Play the 66Lottery Games?</h2>
       <div class="card">
         <p>
           Understanding the basic gameplay flow can help new users get started
@@ -1622,7 +1614,7 @@
         </p>
 
         <ol>
-          <li>Create an account and sign in</li>
+          <li>Complete 66 Lottery Register and 66 Lottery login</li>
           <li>Select a preferred game category</li>
           <li>Review the rules displayed for the chosen format</li>
           <li>Make selections based on available options</li>
@@ -1651,8 +1643,8 @@
         </ul>
 
         <div class="banner-image">
-          <img src="66Lottery-Trending-Apps.webp"
-              width="600"
+          <img src="66-Lotery-Image.webp"
+              width="800"
               height="400"
               loading="lazy"
               alt="66 Lottery trending mobile gaming platform"
